hermit-keys/src/HomeContent.css
/* HomeContent.css */
h1 {
  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
  font-size: 24px;
  font-style: normal;
  font-variant: normal;
  font-weight: 700;
  line-height: 26.4px;
}

h3 {
  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
  font-size: 14px;
  font-style: normal;
  font-variant: normal;
  font-weight: 700;
  line-height: 15.4px;
}

p {
  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
  font-size: 14px;
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  line-height: 20px;
}

blockquote {
  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
  font-size: 21px;
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  line-height: 30px;
}

pre {
  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
  font-size: 13px;
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  line-height: 18.5714px;
}

.home-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 20px;
}

.image-container img {
  max-width: 300px;
  height: auto;
  border-radius: 10px;
}

.text-container {
  margin-left: 20px;
}

.input-container {
  margin-top: 20px;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.textbox {
  padding: 10px;
  font-size: 16px;
  border: 1px solid #ddd;
  border-radius: 5px;
  margin-top: 5px;
  width: 100%;
  max-width: 400px;
  background-color: #f0f0f0;
  color: #666;
  cursor: not-allowed; /* Change cursor to indicate non-interaction */
}

